created forward process

--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -16,7 +16,8 @@
     "import matplotlib.pyplot as plt\n",
     "from torch.fft import fft2, ifft2, fftshift, ifftshift\n",
     "from torch.distributions import Normal, MultivariateNormal\n",
-    "from diffusion_models.mri_forward.undersampling_mask import *"
+    "from diffusion_models.mri_forward.undersampling_mask import *\n",
+    "from diffusion_models.models import UNet"
    ]
   },
   {
@@ -71,6 +72,78 @@
     "ax[1,1].imshow(gaussian_kernel1d_v(sample.shape, 0.3))\n",
     "ax[2,0].imshow(gaussian_kernel1d_h(sample.shape, 0.3))\n",
     "ax[2,1].imshow(gaussian_kernel2d(sample.shape, 0.3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = UNet(num_layers=6)"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Noise Scheduler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import torch.nn.functional as F\n",
+    "\n",
+    "def linear_beta_schedule(timesteps, start=0.0001, end=0.02):\n",
+    "    return torch.linspace(start, end, timesteps)\n",
+    "\n",
+    "def get_index_from_list(vals, t, x_shape):\n",
+    "    \"\"\" \n",
+    "    Returns a specific index t of a passed list of values vals\n",
+    "    while considering the batch dimension.\n",
+    "    \"\"\"\n",
+    "    batch_size = t.shape[0]\n",
+    "    out = vals.gather(-1, t.cpu())\n",
+    "    return out.reshape(batch_size, *((1,) * (len(x_shape) - 1))).to(t.device)\n",
+    "\n",
+    "def forward_diffusion_sample(x_0, t, device=\"cpu\"):\n",
+    "    \"\"\" \n",
+    "    Takes an image and a timestep as input and \n",
+    "    returns the noisy version of it\n",
+    "    \"\"\"\n",
+    "    noise = torch.randn_like(x_0)\n",
+    "    sqrt_alphas_cumprod_t = get_index_from_list(sqrt_alphas_cumprod, t, x_0.shape)\n",
+    "    sqrt_one_minus_alphas_cumprod_t = get_index_from_list(\n",
+    "        sqrt_one_minus_alphas_cumprod, t, x_0.shape\n",
+    "    )\n",
+    "    # mean + variance\n",
+    "    return sqrt_alphas_cumprod_t.to(device) * x_0.to(device) \\\n",
+    "    + sqrt_one_minus_alphas_cumprod_t.to(device) * noise.to(device), noise.to(device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Define beta schedule\n",
+    "T = 300\n",
+    "betas = linear_beta_schedule(timesteps=T)\n",
+    "\n",
+    "# Pre-calculate different terms for closed form\n",
+    "alphas = 1. - betas\n",
+    "alphas_cumprod = torch.cumprod(alphas, axis=0)\n",
+    "alphas_cumprod_prev = F.pad(alphas_cumprod[:-1], (1, 0), value=1.0)\n",
+    "sqrt_recip_alphas = torch.sqrt(1.0 / alphas)\n",
+    "sqrt_alphas_cumprod = torch.sqrt(alphas_cumprod)\n",
+    "sqrt_one_minus_alphas_cumprod = torch.sqrt(1. - alphas_cumprod)\n",
+    "posterior_variance = betas * (1. - alphas_cumprod_prev) / (1. - alphas_cumprod)"
    ]
   },
   {
