--- a/tests/test1.ipynb
+++ b/tests/test1.ipynb
@@ -22,24 +22,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([5000, 1, 28, 28]) torch.Size([5000])\n"
+     ]
+    }
+   ],
    "source": [
     "train = FashionMNIST(\"data\", train=True, download=True, transform=ToTensor())\n",
     "test = FashionMNIST(\"data\", train=False, download=True, transform=ToTensor())\n",
     "\n",
     "train_loader = DataLoader(train, batch_size=5000)\n",
-    "test_loader = DataLoader(test, batch_size=len(test))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "sample = torch.randn((10, 3, 200, 300))"
+    "test_loader = DataLoader(test, batch_size=len(test))\n",
+    "\n",
+    "sample = next(iter(train_loader))\n",
+    "print(sample[0].shape, sample[1].shape)"
    ]
   },
   {
@@ -48,109 +50,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "import matplotlib as mpl\n",
-    "mpl.rc('image', cmap='gray')\n",
-    "\n",
-    "fig, ax = plt.subplots(3,2)\n",
-    "ax[0,0].imshow(naive_undersampling2d(sample.shape, 2))\n",
-    "ax[0,1].imshow(naive_undersampling1d_v(sample.shape, 2))\n",
-    "ax[1,0].imshow(naive_undersampling1d_h(sample.shape, 2))\n",
-    "ax[1,1].imshow(gaussian_kernel1d_v(sample.shape, 0.3))\n",
-    "ax[2,0].imshow(gaussian_kernel1d_h(sample.shape, 0.3))\n",
-    "ax[2,1].imshow(gaussian_kernel2d(sample.shape, 0.3))"
+    "class VAE(nn.Module):\n",
+    "    def __init__(self) -> None:\n",
+    "        super().__init__()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mask = StochasticUndersamplingMask(\"gauss_2d\", 0.3)\n",
-    "mask2 = UndersamplingMask(\"naive_1d_v\", 3)"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "I have to go via the CDF, for finding the undersampling factor!"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "out, mask = mask(sample)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "noise = torch.randn_like(mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mult = noise * mask\n",
-    "add = noise + mask"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "mean = torch.mean(mask)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 36,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(torch.Size([60000]), tensor(40413))"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "add.ge(mean*2).view(-1).shape, add.ge(np.log(1)).view(-1).sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
