--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -15,7 +15,7 @@
 \usepackage[english]{babel}
 \usepackage[utf8]{inputenc}
 \usepackage[T1]{fontenc}
-\usepackage[babel,german=swiss]{csquotes}
+\usepackage[english]{csquotes}
 
 % Basic Typesetting Options
 \usepackage{lmodern}
@@ -110,6 +110,7 @@
 	\input{chap/acknowledgments.tex}
 	\input{chap/introduction.tex}
 	\input{chap/diffusion_process.tex}
+	\input{chap/generative_ai.tex}
 	
 	%\setcounter{tocdepth}{3} % depth of ToC
 	\tableofcontents
