--- a/thesis/main.tex
+++ b/thesis/main.tex
@@ -22,6 +22,7 @@
 \usepackage{setspace}
 \usepackage{pdfpages}
 \usepackage{helvet}
+\usepackage{glossaries}
 
 \pagestyle{headings}
 \onehalfspacing
@@ -111,6 +112,7 @@
 	\input{chap/introduction.tex}
 	\input{chap/diffusion_process.tex}
 	\input{chap/generative_ai.tex}
+	\input{glossaries/math_glossary.tex}
 	
 	%\setcounter{tocdepth}{3} % depth of ToC
 	\tableofcontents
