--- a/tests/pos_encoding.ipynb
+++ b/tests/pos_encoding.ipynb
@@ -2,14 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_19162/558668595.py:17: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
+      "/tmp/ipykernel_21122/558668595.py:17: UserWarning: torch.range is deprecated and will be removed in a future release because its behavior is inconsistent with Python's range builtin. Instead, use torch.arange, which produces values in [start, end).\n",
       "  ts = torch.range(0, timesteps, dtype=torch.int64)\n"
      ]
     }
@@ -33,6 +33,26 @@
     "\n",
     "ts = torch.range(0, timesteps, dtype=torch.int64)\n",
     "pos_encoding = pos_encoder.get_pos_encoding(ts)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([101, 128])"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pos_encoding.shape"
    ]
   },
   {
