updates and samples

--- a/tests/sampler_tests/latent_histograms.ipynb
+++ b/tests/sampler_tests/latent_histograms.ipynb
@@ -43,7 +43,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "fwd = ForwardDiffusion(timesteps=1000, type=\"cosine\")\n",
-    "samples = torch.zeros((16,1,128,128))#get_samples(16)\n",
+    "samples = torch.zeros((16,1,128,128))\n",
     "noisies = torch.zeros_like(samples).unsqueeze(0).repeat(fwd.timesteps, 1, 1, 1, 1)\n",
     "noisies_k = torch.zeros_like(noisies)\n",
     "for t in range(fwd.timesteps):\n",
